clean up CRUD with event
