# api/docs/swagger.json
@@ -392,7 +392,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/application_service.UpdateApplicationModel"
+                                            "$ref": "#/definitions/application_service.ApplicationUpdatedModel"
                                         }
                                     }
                                 }
@@ -542,6 +542,17 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "application_service.ApplicationUpdatedModel": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 }
             }
